[package]
name = "terraform-zap"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Script wrapper to perform finer terraform destroy"
repository = "https://github.com/guangie88/terraform-zap"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
failure = "=0.1.1"
structopt = "=0.2.7"
structopt-derive = "=0.2.7"
terraform-zap-ignore-lib = { path = "ignore-lib", version = "0.1.0" }
toml = "=0.4.6"
which = "=2.0.0"

[workspace]
members = [
    "ignore-lib",
]

[[bin]]
name = "terraform-zap"
path = "src/main.rs"
