[package]
name = "terraform-zap-ignore-lib"
version = "0.4.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Provides ignore implementation to terraform-zap"
documentation = "https://docs.rs/terraform-zap-ignore-lib"
repository = "https://github.com/guangie88/terraform-zap"
readme = "README.md"
license = "MIT"

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"

[dev-dependencies]
toml = "0.4.6"

[lib]
path = "src/lib.rs"
